# advent-of-code-2022

./: CHANGELOG.md  LICENSE  advent-of-code-2022.cabal  readme.md
.github/workflows/: ci.yaml
cli/: CliArguments.hs  Main.hs
days/AdventOfCode2022/: Day1.hs  Day2.hs  Day3.hs
inputs/: dummy.txt
lib/AdventOfCode2022/: CliArguments.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day1.hs  Day10.hs  Day11.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Parsing.hs
tests/: Main.hs  TestCliArguments.hs  TestDay01.hs  TestDay02.hs  TestDay03.hs  TestDay04.hs  TestDay05.hs  TestDay06.hs  TestDay07.hs  TestDay08.hs  TestDay09.hs  TestDay1.hs  TestDay10.hs  TestDay11.hs  TestDay2.hs  TestDay3.hs  TestDay4.hs  TestDay5.hs  TestDay6.hs  TestDay7.hs  TestDay8.hs  TestDay9.hs
