cabal-version: 3.0
name: advent-of-code
version: 0.1.0.0
-- synopsis:
-- description:
license: MIT
license-file: LICENSE
author: Milan Suk
maintainer: Milansuk@email.cz
-- copyright:
category: Development
build-type: Simple
extra-doc-files: CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import: warnings
    build-depends: base ^>=4.14,
                   split ^>=0.2.3.5,
                   containers,
                   lens ^>=5.2,
                   attoparsec ^>=0.14.4,
                   text ^>=1.2.5,
    hs-source-dirs: lib
    default-language: Haskell2010
    exposed-modules: AdventOfCode2022.CliArguments,
                     AdventOfCode2022.Parsing,
                     AdventOfCode2022.Day1,
                     AdventOfCode2022.Day2,
                     AdventOfCode2022.Day3,
                     AdventOfCode2022.Day4,
                     AdventOfCode2022.Day5,

executable cli
    import: warnings
    main-is: Main.hs
    build-depends: base ^>=4.14, advent-of-code, lens ^>=5.2
    hs-source-dirs: cli
    default-language: Haskell2010

executable tests
    import: warnings
    main-is: Main.hs
    other-modules: TestDay1
    build-depends: base ^>=4.14,
                   hspec ^>=2.10.6,
                   advent-of-code
    hs-source-dirs: tests
    default-language: Haskell2010
    other-modules: TestCliArguments,
                   TestDay1,
                   TestDay2,
                   TestDay3,
                   TestDay4,
                   TestDay5,
